@@ -21,3 +21,7 @@
 [ ] patron : http can steal each other's patron session (inside the same thread)
 [ ] why not a :force_json ?
 
+[ ] make HttpCore detect do_request
+
+[ ] timeout per request ?
+
